scripts/nullaway/annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8.txt
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractDestinationTest.java:54: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			destination.put(null);
			                ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractDestinationTest.java:89: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			destination.addSubscriber(null);
			                          ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MessageImpl.java:9: error: [NullAway] initializer method does not guarantee @NonNull field message (line 6) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	MessageImpl() {
	^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumerTest.java:40: error: [NullAway] initializer method does not guarantee @NonNull field consumer (line 33) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public void setup() {
	            ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumerTest.java:47: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			consumer = new AbstractMessageConsumer(null) {
			                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumerTest.java:91: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		mockTopic.getTopicSubscriber().onMessage(null);
		                                         ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumerTest.java:432: error: [NullAway] dereferenced expression e.getCause() is @Nullable
					.getClass());
					^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumerTest.java:459: error: [NullAway] dereferenced expression e.getCause() is @Nullable
					.getClass());
					^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumer.java:126: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumer.java:154: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageConsumer.java:178: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockTopic.java:11: error: [NullAway] @NonNull field subscriber not initialized
	AsyncMessageConsumer subscriber;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockTopic.java:36: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.subscriber = null;
			                ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/TopicImplTest.java:226: error: [NullAway] dereferenced expression count is @Nullable
						count.incrementAndGet();
						     ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageProducerTest.java:18: error: [NullAway] initializer method does not guarantee @NonNull field producer (line 14) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public void setUp() {
	            ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/AbstractMessageProducerTest.java:73: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			producer = new AbstractMessageProducer(null) {
			                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockQueueReceiver.java:12: error: [NullAway] @NonNull field queue not initialized
	Queue queue;
	      ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockQueueReceiver.java:20: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockQueueReceiver.java:26: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockQueue.java:11: error: [NullAway] @NonNull field receiver not initialized
	AsyncMessageConsumer receiver;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockQueue.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.receiver = null;
			              ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockMessageConsumer.java:23: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockMessageConsumer.java:29: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/QueueSenderImplTest.java:25: error: [NullAway] initializer method does not guarantee @NonNull field sender (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public void setUp() {
	            ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/QueueSenderImplTest.java:73: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			sender.sendMessage(null);
			                   ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/TopicPublisherImplTest.java:25: error: [NullAway] initializer method does not guarantee @NonNull field producer (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public void setUp() {
	            ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/TopicPublisherImplTest.java:72: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			producer.publish(null);
			                 ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockTopicSubscriber.java:13: error: [NullAway] initializer method does not guarantee @NonNull field topic (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MockTopicSubscriber() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockTopicSubscriber.java:27: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla5230a98e3_Dhana_Krishnasamy_InMemoryJMS_tgz-pJ8-com_dhana_broker_demo_AppJ8/src/com/dhana/broker/impl/MockTopicSubscriber.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
30 errors
